# nodex

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  app-helpers.ai-route.test.ts  app-helpers.ts  app.back-handoff.test.tsx  i18n.ts  main.tsx  panes.recovery.test.tsx  styles.css  tauri.ts  types.ts  workbench.ai-route-surface.test.tsx  workbench.node-context-surface.test.tsx  workbench.side-pane.test.tsx  workbench.source-context-surface.test.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: index.html  main.js  styles.css
docs/: README.md  architecture.md  cli.md  data-model.md  desktop-v2.md  langchain-pilot.md  next-steps.md  patch-model.md  product.md  roadmap.md
examples/: expand-root.json
scripts/: ai_contract.py  anthropic_context.py  codex_context.py  codex_doctor.py  codex_runner.py  compare_offline_runner.py  desktop_flow_smoke.py  gemini_context.py  gemini_doctor.py  gemini_runner.py  langchain_anthropic_runner.py  langchain_openai_runner.py  langchain_runner_common.py  openai_context.py  openai_doctor.py  openai_runner.py  provider_doctor.py  provider_registry.py  provider_runner.py  provider_runtime.py  provider_smoke.py  runner_compare.py  source_context_scenario.py
scripts/fixtures/: plan-context-smoke.md  research-context-smoke.md  (+1 more)
src/: ai.rs  cli.rs  lib.rs  main.rs  model.rs  patch.rs  project.rs  source.rs  store.rs
(+11 files in other folders)
