[package]
name = "nodex"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Patch-first CLI for local AI mind maps"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"
